--- a/docs/phil/distinctions/broken/theoretical_observable.qmd
+++ b/docs/phil/distinctions/broken/theoretical_observable.qmd
@@ -2,6 +2,10 @@
 ---
 title: Theoretical vs observable objects
 ---
+:::{.callout-warning}
+These notes were hastily made for personal use. In the future they'll be made more presentable.
+:::
+
 # Theoretical vs observable objects
 
 It is commonly reasoned that abstract or theoretical objects and concrete observable objects are simply different types of things. The example of [Pluto](/docs/phil/situations/pluto.qmd) makes it clear that what we really want to make is a distinction of how we *come to know* of something, rather than thinking about ontologicall different things.
