--- a/docs/phil/people/hume/index.qmd
+++ b/docs/phil/people/hume/index.qmd
@@ -19,4 +19,4 @@ So, Hume, and following him, Quine took it that epistemologically (but mostly se
 
 Hume saw that there was nothing that you could be labeling (or in his sense, describing) by these statements of laws. This is why Hume woke [Kant](/docs/phil/people/kant/index.qmd) from his dogmatic slumbers.
 
-This stems from a kind of [semantic nominalism](/docs/phil/people/brandom/semantic_nominalism.qmd) that drew sharp lines around what you couldn't describe. Hume understood saying/thinking something *as* describing something. It falls out of this that saying how things might have been (or how things had to be) isn't describing anything. These are the consequences of a theory of description (in the narrow sense) and a descriptivist theory of language. Kant looks at Newton's physics and determines that these conclusions are wrong, so there must be some non-descriptive thing we can do.
+This stems from a kind of [semantic nominalism](/docs/phil/people/brandom/sellars09/4/#semantic-nominalism) that drew sharp lines around what you couldn't describe. Hume understood saying/thinking something *as* describing something. It falls out of this that saying how things might have been (or how things had to be) isn't describing anything. These are the consequences of a theory of description (in the narrow sense) and a descriptivist theory of language. Kant looks at Newton's physics and determines that these conclusions are wrong, so there must be some non-descriptive thing we can do.
