--- a/docs/phil/situations/behaviorism.qmd
+++ b/docs/phil/situations/behaviorism.qmd
@@ -1,6 +1,9 @@
 ---
 title: Behaviorism
 ---
+:::{.callout-warning}
+These notes were hastily made for personal use. In the future they'll be made more presentable.
+:::
 
 
 This is related to the problem of: suppose you follow a rule. You use a
