--- a/docs/phil/situations/warhero.qmd
+++ b/docs/phil/situations/warhero.qmd
@@ -1,6 +1,9 @@
 ---
 title: The War Hero
 ---
+:::{.callout-warning}
+These notes were hastily made for personal use. In the future they'll be made more presentable.
+:::
 
 From [-@castaneda1968logic]:
 
