--- a/references.bib
+++ b/references.bib
@@ -360,3 +360,19 @@
   pages={346--370},
   year={2008}
 }
+@book{goodman1983fact,
+  title={Fact, fiction, and forecast},
+  author={Goodman, Nelson},
+  year={1983},
+  publisher={Harvard University Press}
+}
+@article{kraut1990varieties,
+  title={Varieties of pragmatism},
+  author={Kraut, Robert},
+  journal={Mind},
+  volume={99},
+  number={394},
+  pages={157--183},
+  year={1990},
+  publisher={JSTOR}
+}
