--- a/docs/phil/distinctions/broken/analytic_synthetic.qmd
+++ b/docs/phil/distinctions/broken/analytic_synthetic.qmd
@@ -1,6 +1,9 @@
 ---
 title: The analytic / synthetic distinction
 ---
+:::{.callout-warning}
+These notes were hastily made for personal use. In the future they'll be made more presentable.
+:::
 
 # Background
 
