--- a/docs/phil/distinctions/broken/index.qmd
+++ b/docs/phil/distinctions/broken/index.qmd
@@ -4,11 +4,12 @@ title: Distinctions broken
 
 We naturally discretize things in the world into different categories of things, but many times philosophy will find that two things (possibly seemingly opposites) are shown convincingly to being the same in some fundamental sense.
 
+# [Analytic/synthetic facts](analytic_synthetic.qmd)
 {{< include analytic_synthetic.qmd >}}
 
-{{< include rortian_pragmatism.qmd >}}
+# [Objective/subjective facts](objective_subjective.qmd)
+{{< include objective_subjective.qmd >}}
 
-{{< include antibifurcationism.qmd >}}
 
 ---
 title: Distinctions broken
