--- a/docs/phil/distinctions/made/sense_dependence_reference.qmd
+++ b/docs/phil/distinctions/made/sense_dependence_reference.qmd
@@ -1,6 +1,9 @@
 ---
 title: Sense dependence vs reference
 ---
+:::{.callout-warning}
+These notes were hastily made for personal use. In the future they'll be made more presentable.
+:::
 
 Two meanings of "$X$ depends on $Y$" that are easily conflated.
 
