--- a/docs/phil/distinctions/made/subjunctive_counterfactual.qmd
+++ b/docs/phil/distinctions/made/subjunctive_counterfactual.qmd
@@ -1,6 +1,9 @@
 ---
 title: Subjunctive vs counterfactual conditionals
 ---
+:::{.callout-warning}
+These notes were hastily made for personal use. In the future they'll be made more presentable.
+:::
 
 - Subjunctive conditional: if $X$ were $\psi$'d, it would $\phi$.
     - (example?)
