--- a/docs/phil/people/brandom/antirep/2/index.qmd
+++ b/docs/phil/people/brandom/antirep/2/index.qmd
@@ -1,3 +1,69 @@
 ---
 title: Rorty’s Critique of Enlightenment Representationalism, and (so) of Analytic Philosophy
 ---
+:::{.callout-warning}
+These notes were hastily made for personal use. In the future they'll be made more presentable.
+:::
+
+# Rorty's basic idea
+## Neokantianism vs a socialized/historicized/naturalized alternative
+
+
+- Struggle between two camps in the 19th century, which is then re-enacted in the 20th century
+  - Neokantianism (Marburg / Freiburg to CI Lewis and Carnap). Philosophy has sovereign authority.
+    - Idea originates with Plato, but Descartes/Kant/representationalism are modern versions.
+  - Neohegelianism (Hegel socialized philosophy, Marx naturalized it). Philosophy brought 'down to Earth'.
+- Bertrand Russell and Husserl found things for philosophy to be apodictic about. Basis of Rorty's 'astonishing' claim that analytic philosophy is just a phase of neokantianism
+  - Russell and those downstream don't think of themselves this way.
+  - But they share the idea that philosophy of language is "first philosophy" and that linguistically-inflected philosophy of mind could advance our notions of epistemology and general theory of representation.
+  - Shared emphasis on understanding language semantically, distinct from understanding knowledge epistemologically.
+  - Husserl subject to Sellars' critique of the Myth of the Given, Russell subject to Quine's critique of Myth of the Museum. (Carnap subject to both).
+    - "Uncritical semantics is the myth of a museum in which the exhibits are meanings and the words are labels. To switch languages is to change the labels". Against the museum myth, Quine argues here  for the indeterminacy of "meaning" and translation.
+    - These are both (semantic) holist arguments.
+- Rorty regards the pragmatist/holist Quine+Sellars rebuttals as bringing us back to Dewey's socialized/historicized/naturalized philosophy, with the 20th century being a pointless, big detour (despite increase in technical advances in logic/language).
+
+## Assimilation of two kinds of representations
+- Two kinds of privileged representations: sense impressions and representings of meaning (meanings thought representationally instead of functionally)
+
+- Rorty sees common genus to analytic meaning-articulating claims and the sensory given: privileged representations
+- common origin: role as infinite regress stoppers for the two types of representations, sensuous intuitions and inference-licensing concepts, that Kant distinguished (which each have these relations of privilege/authority).
+  - Agrippan trilema of alternatives to skepticism
+    - justification always in reference to other claims which require justification (this can be circular or infinite regress) OR there are unjustified justifiers / foundations.
+    - If we have foundations, we need two kinds of regress stoppers:
+      - premises that have authority
+      - inferential transitions that have authority
+        - These are not the same as premises, c.f. Tortoise and the Hare
+- That the "privileged representations" are authoritative and immediate, a kind of atomism follows from their privilege.
+  - In order to play their epistemically-privileged roles, the regress stoppers must be semantically-privileged insofar as not depending on any collateral epistemic commitments.
+  - Quine and Sellars' critiques render such semantic privilege as practically unintelligible. A requirement that cannot be fulfilled.
+
+## Holism of Sellars and Quine
+Holist/pragmatic arguments of Sellars (against sense-givenness) and Quine (against meaning-givenness) that connect epistemology and semantics:
+
+- Sellars in EPM
+  - Locke got confused by conflating the causation of a belief from its justification.
+  - Sense data may be causally prerequisite to knowledge, but it cannot justify belief (it's not conceptually contentful, in the sense of standing in reason relations of implication/justification).
+    - To stand in reason relations requires lots of other infrastructure, such that atomic sense data cannot do this on its own (this is a semantic holist argument)
+    - How do we acquire knowledge in the semantic holist POV?
+      - How to get into the game of giving and asking for reasons? "The light dawns slowly over the whole" We need to get good enough at making the 'right' moves (as judged by 'competent speakers' before counting as a 'competent speaker'.
+- Quine in TDE
+  - Target: analytic truths, e.g. "cats are mammals" supposedly not depending on any other commitments but rather immediately from the meanings of the words.
+  - What is the practical difference between these truths and very general facts, such as "there have been black dogs".
+  - Duhem-Quine thesis: "it is impossible to test a scientific hypothesis in isolation, because an empirical test of the hypothesis requires one or more background assumptions".
+    - What inferences we are allowed to make depends on the whole of collateral beliefs we have.
+- The unit of meaning must be the web-of-belief rather than the concept or the sentence.
+- Fodor argues against this, considers mixing epistemology and semantics to be a big philosophical mistake initiated by Quine.
+
+
+# Who is Rorty opposing?
+
+Is Rorty attacking a strawman? Empiricism / Epistemic foundationalism is not popular now:
+
+- "Default and challenge" structure a way of avoiding [Agrippan trilemma](/docs/phil/problems/agrippan.qmd).
+- Bayesianism sees all justification as comparative (never have to justify one's prior commitments).
+  - though the problem of semantics is still open if it is to not be representationalist
+- Naturalism + representationalism remains unchallenged.
+  - picking an ontologically privileged base vocabulary
+- So Rorty and Pryce need to do one or both of:
+  1. Argue independently for pragmatism, then use that to attack representationalism without passing through foundationalism
+  2. Argue independently against representationalism and propose pragmatism as the best alternative approach
