--- a/docs/phil/people/brandom/sellars09/3/index.qmd
+++ b/docs/phil/people/brandom/sellars09/3/index.qmd
@@ -1,3 +1,6 @@
+:::{.callout-warning}
+These notes were hastily made for personal use. In the future they'll be made more presentable.
+:::
 
 # Language as thought and communication
 
