Better research descriptions

--- a/docs/research.qmd
+++ b/docs/research.qmd
@@ -10,25 +10,29 @@ I work with a [team](https://www.algebraicjulia.org/) developing applied categor
 <iframe width="560" height="315" src="https://www.youtube.com/embed/vJRAw8USmYs"></iframe>
 
 ## Model Exploration
-The problem of exploring spaces of scientific models and our compositional solution are described in our ACT 2022 paper [-@brown2022modexp]. [[code](https://github.com/kris-brown/ModelExploration.jl)]
+Many search / optimization problems can be thought of as "exploring a space of models." E.g.:
 
-## Model inference
-We generalized term rewriting to a general setting in our ICGT 2022 paper [-@brown2021rewrite]. We demonstrate some of this functionality in this [notebook](https://nbviewer.org/github/kris-brown/Computational-Category-Theoretic-Rewriting/blob/main/Computational_Category_Theoretic_Rewriting.ipynb). This is being applied to epidemiology with [Sean Wu](https://slwu89.github.io/): [individual-based stochastic models for epidemiology](https://github.com/slwu89/IndividualRewrite)
+- We have a notion of what a chemical reaction network is and want to find one that fits some experimental data
+- We have a notion of an electrical circuit and want to explore candidates that have the same voltage response to some black box we are probing.
+- Neural networks depend heavily on their architecture - can we explore the space of possible architectures in a meaningful way to help us find better ones?
 
-We can compute and prove theorems with string diagrams: [[code](https://github.com/AlgebraicJulia/GraphicalLinearAlgebra)]
+We aim to say something about this process generically by formulating a *language* for model exploration. This language accomodates arbitrary kinds of "primitive" model spaces and instead is focused on how we can compose smaller spaces into larger ones, as described in our ACT 2022 paper [-@brown2022modexp]. [[code](https://github.com/kris-brown/ModelExploration.jl)]
+
+## Generalized setting for term rewriting
+Rewriting (i.e. execution of rules of the form: match a pattern, then perform a replacement) is an elegant way to express some computations, as we express our algorithm diagrammatically, rather than in code. We implemented term rewriting to a general setting in our ICGT 2022 paper [-@brown2021rewrite]. We demonstrate some of this functionality in this [notebook](https://nbviewer.org/github/kris-brown/Computational-Category-Theoretic-Rewriting/blob/main/Computational_Category_Theoretic_Rewriting.ipynb). This is being applied to epidemiology with [Sean Wu](https://slwu89.github.io/): [individual-based stochastic models for epidemiology](https://github.com/slwu89/IndividualRewrite)
 
 ## C-set automorphisms
-As described in this [blog post](https://www.algebraicjulia.org/blog/post/2022/01/cset-automorphisms/), this project concerns extending McKay's graph algorithm (implemented as [nauty](https://pallini.di.uniroma1.it/)) to C-sets, so that isomorphic instances can be immediately seen to be equal. [[code](https://github.com/AlgebraicJulia/CSetAutomorphisms.jl)]
+With a high degree of generality, we consider data that can have many types of symmetries and answer the questions: when are two objects basically the same? How do you compute a canonical form? As described in this [blog post](https://www.algebraicjulia.org/blog/post/2022/01/cset-automorphisms/), this project concerns extending McKay's graph algorithm (implemented as [nauty](https://pallini.di.uniroma1.it/)) to C-sets, so that isomorphic instances can be immediately seen to be equal. [[code](https://github.com/AlgebraicJulia/CSetAutomorphisms.jl)]
 
 ## Model enumeration
- As described at the end of this [blog post](https://62b383e20eb7802fe1b2d124--algebraicjuliablog.netlify.app/post/2022/06/chase/#model_enumeration), model enumeration exhaustively explores a logically constrained search space. This can be used pedagogically to explain mathematical concepts (e.g. give intuition for [natural transformations](https://www.math3ma.com/blog/what-is-a-natural-transformation) by showing the 10 smallest natural transformations) or in an engineering context as a [model checker](https://en.wikipedia.org/wiki/Model_checking). The logical language we can use to specify constraints is that of finite (co)limit [sketches](https://ncatlab.org/nlab/show/sketch). [[code](https://github.com/kris-brown/ModelEnumeration.jl)]
+As described at the end of this [blog post](https://62b383e20eb7802fe1b2d124--algebraicjuliablog.netlify.app/post/2022/06/chase/#model_enumeration), model enumeration *exhaustively* explores a logically constrained search space. This can be used pedagogically to explain mathematical concepts (e.g. give intuition for [natural transformations](https://www.math3ma.com/blog/what-is-a-natural-transformation) by showing the 10 smallest natural transformations) or in an engineering context as a [model checker](https://en.wikipedia.org/wiki/Model_checking). The logical language we can use to specify constraints is that of finite (co)limit [sketches](https://ncatlab.org/nlab/show/sketch). [[code](https://github.com/kris-brown/ModelEnumeration.jl)]
 
 
 # Past
 ## Knowledge representation and data integration
 
 ### Declarative specification of databases
-Scientists modeling complicated phenomena don't use explicit (formally-specified) models. This is pragmatic, given current available open-source tools, but informal reasoning ulimately leads to serious challenges in communicating scientific results clearly and sharing data. A relational database backend is important for a scalable modeling tool, but a SQL-less interface is also crucial: the complexity of managing database implementation details quickly becomes unmanagable and unextensible as the model complexity increases. I developed a Python EDSL to help scientists generate relational databases from a natural declaration of scientific facts and to naturally query and publicly communicate their knowledge base. Our strategy is published [here](https://chemrxiv.org/engage/chemrxiv/article-details/61035b88171fc78221b9a9cd) [-@statt2021dbgen] and [here](https://chemrxiv.org/engage/chemrxiv/article-details/60c73cbf842e650956db1678) [-@statt2021esamp], and it is being commercialized by the startup [Modelyst](https://www.modelyst.com/).
+Scientists modeling complicated phenomena don't use explicit (formally-specified) models. This is pragmatic, given current available open-source tools, but informal reasoning ulimately leads to serious challenges in communicating scientific results clearly and sharing data. A relational database backend is important for a scalable modeling tool, but a SQL-less interface is also crucial: the complexity of managing database implementation details quickly becomes unmanagable and unextensible as the model complexity increases. I helped develop a Python EDSL to help scientists generate relational databases from a natural declaration of scientific facts and to naturally query and publicly communicate their knowledge base. Our strategy is published [here](https://chemrxiv.org/engage/chemrxiv/article-details/61035b88171fc78221b9a9cd) [-@statt2021dbgen] and [here](https://chemrxiv.org/engage/chemrxiv/article-details/60c73cbf842e650956db1678) [-@statt2021esamp], and it is being commercialized by the startup [Modelyst](https://www.modelyst.com/) by Michael Statt and Brian Rohr.
 
 ### Heterogenous data integration, using Category Theory
 
